--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
+        <p class="lead">Eu sou Mike </p>
         <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
+        <p>Sou TI. Ensino pensamento computacional para estudantes do Ensino
             Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
@@ -83,10 +83,11 @@
         <div>
             <a href="https://github.com/femascheti">GitHub</a>
         </div>
-        <p class="my-5 text-center">© Copyright 2024. Produzido por Fernanda Mascheti</p>
+        <p class="my-5 text-center">© Copyright 2024. Produzido por Mike Macedo</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
